Fixed dropdown nav text overflowing

--- a/wp-content/themes/ERS/assets/styles/components/_paperclip-bootstrap.less
+++ b/wp-content/themes/ERS/assets/styles/components/_paperclip-bootstrap.less
@@ -133,6 +133,7 @@ Last change:    18/02/2015
   .navbar-nav > li > .dropdown-menu,
   .dropdown-submenu > .dropdown-menu {
     margin-top: 3px;
+    right: auto;
     &:before {
       content: "";
       position: absolute;
